--- a/config/128muboot.config
+++ b/config/128muboot.config
@@ -6286,7 +6286,7 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-email is not set
 # CONFIG_PACKAGE_luci-app-eoip is not set
 # CONFIG_PACKAGE_luci-app-eqos is not set
-CONFIG_PACKAGE_luci-app-eqos-mtk=y
+# CONFIG_PACKAGE_luci-app-eqos-mtk is not set
 # CONFIG_PACKAGE_luci-app-example is not set
 # CONFIG_PACKAGE_luci-app-fancontrol is not set
 # CONFIG_PACKAGE_luci-app-filebrowser is not set
